--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,15 @@
 
 {% block content %}
 Тут будет контент
-<div>
-    <a href="{% url 'logout' %}">Logout</a>
-    <a href="{% url 'register' %}">Sign Up</a>
-    <a href="{% url 'login' %}">login</a>
-</div>
+<br>
+User name - {{request.user}}
+<br>
 
-{{request.user}}
-
- {% if request.user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a> {% else %}
-    <a href="{% url 'login' %}">Login</a> {% endif %}
+<a href="{% url 'register' %}">Sign Up</a>
+  {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
 
 {% endblock %}
