add Footer and information in page about

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,11 +4,33 @@
 {%block style %}
     <link rel="stylesheet" href="{%static 'style.css'%}">
 {% endblock %}
-{%block header%}
- Тут будет хедер
-{%endblock%}
-
 
 {% block content %}
-Информация о сайте !!!!!!!!!
+<ul class="about_list">
+    <li>
+        <h1>Добро пожаловать в наш интернет-магазин!</h1>
+    </li>
+    <li>
+        <span>Мы - команда энтузиастов, создающая уникальные и качественные товары для вашего комфорта и удовольствия. Наша миссия - сделать вашу жизнь лучше, предлагая широкий ассортимент продуктов высокого качества по доступным ценам.</span>
+    </li>
+    <li>
+        <span>В нашем магазине вы найдете все необходимое для создания уюта и стиля в вашем доме, а также для заботы о себе и близких. Мы тщательно отбираем товары от лучших производителей, чтобы вы могли быть уверены в их качестве и надежности.
+    </span>
+    </li>
+    <li>
+        <span>Наша команда всегда готова помочь вам с выбором товара и ответить на все ваши вопросы. Мы стремимся к тому, чтобы ваше покупательное впечатление было максимально приятным и удобным.</span>
+    </li>
+    <li>
+        <span>Благодарим вас за то, что выбрали наш интернет-магазин. Мы надеемся, что ваше время с нами будет приятным и вы найдете здесь все, что искали.</span>
+    </li>
+    <li>
+        <h2>С уважением,</h2><h2>Команда DanStore</h2>
+    </li>
+</ul>
 {% endblock %}
+
+
+
+
+
+
