--- a/templates/base.html
+++ b/templates/base.html
@@ -7,63 +7,78 @@
     <title>Dansite</title>
 </head>
 <body>
-<header>
-    <ul class="Header_list">
-        <li class="Header-logo">
-            <img src="../static/logo.svg" alt="" class="logo">
-        </li>
-        <li>
-            <ul class="Menu_list">
-                <li><a href="{% url 'index' %}">Home</a></li>
-                <li><a href="{% url 'product' %}">Product</a></li>
-                <li><a href="{% url 'about' %}">About Us</a></li>
-            </ul>
-        </li>
-        <li>
-            <ul class="authorization_list">
-                {% if request.user.is_authenticated %}
-                    <li class="authorization"> {{request.user.username}} | 
-                        <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit" class="button_logout">Logout</button>
-                        </form>
-                    </li>
-                {% else %}
-                    <li class="authorization"><a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Sign Up</a></li>
-                {% endif %}
-            </ul>
-        </li>
-    </ul>
-</header>
-<section class="Block_content">
-    {% block content %}
-    {% endblock %}
-</section>
-<section>
-    {% block login %}
-    {% endblock %}
-</section>
-<footer>
-    <ul class="Footer_list">
-        <li class="Header-logo">
-            <img src="../static/logo.svg" alt="" class="logo">
-        </li>
-        <li>
-            <ul class="Menu_list">
-                <li><a href="{% url 'index' %}">Home</a></li>
-                <li><a href="{% url 'product' %}">Product</a></li>
-                <li><a href="{% url 'about' %}">About Us</a></li>
-            </ul>
-        </li>
-    </ul>
-    <ul class="FooterEnd_List">
-        <li>
-            <span>© 2024 All Rights Reserved | DanStore</span>
-        </li>
-        <li>
-            <span>Company Site   |   Privacy Policy</span>
-        </li>
-    </ul>
-</footer>
+    <header>
+        <ul class="Header_list">
+            <li class="Header-logo">
+                <img src="../static/logo.svg" alt="" class="logo">
+                <span>DanStore</span>
+            </li>
+            <li>
+                <ul class="Menu_list">
+                    {% if user.is_superuser %}
+                        <li><a href="{% url 'admin_page' %}">Admin Page</a></li>
+                        <li><a href="{% url 'add_product' %}">Add Product</a></li>
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="{% url 'product' %}">Product</a></li>
+                        <li><a href="{% url 'about' %}">About Us</a></li>
+                    {% else %}
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="{% url 'product' %}">Product</a></li>
+                        <li><a href="{% url 'about' %}">About Us</a></li>
+                    {% endif %}
+                </ul>
+            </li>
+            <li>
+                <ul class="authorization_list">
+                    {% if request.user.is_authenticated %}
+                        <li class="authorization"> {{request.user.username}} | 
+                            <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="button_logout">Logout</button>
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="authorization"><a href="{% url 'login' %}">Login</a> | <a href="{% url 'register' %}">Sign Up</a></li>
+                    {% endif %}
+                </ul>
+            </li>
+        </ul>
+    </header>
+    <main class="Main">
+        <section class="Block_content">
+            {% block content %}
+            {% endblock %}
+        </section>
+    </main>
+    <footer class="Footer">
+        <ul class="Footer_list">
+            <li class="Header-logo">
+                <img src="../static/logo.svg" alt="" class="logo">
+            </li>
+            <li>
+                <ul class="Menu_list">
+                    {% if user.is_superuser %}
+                        <li><a href="{% url 'admin_page' %}">Admin Page</a></li>
+                        <li><a href="{% url 'add_product' %}">Add Product</a></li>
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="{% url 'product' %}">Product</a></li>
+                        <li><a href="{% url 'about' %}">About Us</a></li>
+                    {% else %}
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="{% url 'product' %}">Product</a></li>
+                        <li><a href="{% url 'about' %}">About Us</a></li>
+                    {% endif %}
+                </ul>
+            </li>
+        </ul>
+        <ul class="FooterEnd_List">
+            <li>
+                <span>© 2024 All Rights Reserved | DanStore</span>
+            </li>
+            <li>
+                <span>Company Site   |   Privacy Policy</span>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
