--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,12 @@
             <li>
                 <ul class="authorization_list">
                     {% if request.user.is_authenticated %}
-                        <li class="authorization"> {{request.user.username}} | 
+                        <li class="authorization"> 
+                            <ul class="user_info">
+                                <li>{{request.user.username}}</li>
+                                <li>{{request.user.wallet}}</li>
+                            </ul>
+                            <a href="{% url 'purchase' %}"><img src="../static/basket_white.svg" alt="" class="basket"></a>
                             <form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type="submit" class="button_logout">Logout</button>
