Add return orders

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                 <ul class="Menu_list">
                     {% if user.is_superuser %}
                         <li><a href="{% url 'admin_page' %}">Admin Page</a></li>
-                        <li><a href="{% url 'add_product' %}">Add Product</a></li>
+                        <li><a href="{% url 'admin_return' %}">Return</a></li>
                         <li><a href="{% url 'index' %}">Home</a></li>
                         <li><a href="{% url 'product' %}">Product</a></li>
                         <li><a href="{% url 'about' %}">About Us</a></li>
