--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -13,11 +13,11 @@
     {% else %}
         {% for purchase_item in purchase_items %}
             <li class="purchase_item">
-                <h1>{{ purchase_item.product.name }}</h1>
+                <h1>{{ purchase_item.name }}</h1>
                 <ul class="purchase_item__list">
                     <li class="purchase_item_image">
-                        {% if purchase_item.product.image %}
-                            <img src="{{ purchase_item.product.image.url }}" alt="Product Image" class="purchase_product_image">
+                        {% if purchase_item.image %}
+                            <img src="{{ purchase_item.image.url }}" alt="Product Image" class="purchase_product_image">
                         {% else %}
                             No image available<br>
                         {% endif %}
@@ -25,10 +25,10 @@
                     <li class="purchase_item_content">
                         <ul class="purchase_content__list">
                             <li class="purchase_content_description">
-                                {{ purchase_item.product.description }}
+                                {{ purchase_item.description }}
                             </li>
                             <li class="purchase_content_price">
-                                <span>{{purchase_item.quantity}} x {{ purchase_item.product.price }} = {{ purchase_item.total_price}}</span>
+                                <span>{{purchase_item.quantity_cart}} x {{ purchase_item.price }} = {{ purchase_item.total_price}}</span>
                             </li>
                             {% if messages %}
                                 {% for message in messages %}
@@ -44,8 +44,10 @@
                                     {% csrf_token %}
                                     <button type="submit" class="delete_button">Delete</button>
                                 </form>
-                                <form action="{% url 'complete_purchase' purchase_item.product.id %}" method="post">
+                                <form action="{% url 'add_to_purchase'%}" method="post" class="add_to_purchase">
                                     {% csrf_token %}
+                                    <input type="hidden" name="product_id" value="{{ purchase_item.pk }}">
+                                    <input type="number" name="quantity" value="{{purchase_item.quantity_cart}}" min="1" class="quantity_product">
                                     <button type="submit" class="buy_button">Buy</button>
                                 </form>
                             </li>
