--- a/static/components/header.css
+++ b/static/components/header.css
@@ -42,6 +42,7 @@
 .Menu_list li a,
 .authorization_list li a {
     color: rgb(255, 255, 255);
+    margin-right: 15px;
 }
 
 .Menu_list li a:hover,
@@ -74,11 +75,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 15px;
+}
+
+.basket_list {
+    position: relative;
 }
 
 .basket {
-    margin-right: 15px;
-    width: 25px;
-    height: 25px;
+    width: 32px;
+    height: 32px;
     fill: white;
+    color: white;
+}
+
+.length_cart {
+    color: rgb(4, 252, 4);
+    font-size: 12px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ani 2.5s forwards;
+}
+
+
+@keyframes ani {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
