--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,16 @@
                                 <li>{{request.user.username}}</li>
                                 <li>{{request.user.wallet}}</li>
                             </ul>
-                            <a href="{% url 'cart' %}"><img src="../static/basket_white.svg" alt="" class="basket">{{request.cart|length}}</a>
+                            <a href="{% url 'cart' %}" class="basket_list">
+                                <img src="../static/basket_header.svg" alt="" class="basket">
+                                {% if request.cart|length == 0 %}
+                                <span class="length_cart"></span>
+                                {% else %}
+                                <span class="length_cart">
+                                    {{request.cart|length}}
+                                </span>
+                                {% endif %}
+                            </a>
                             <form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type="submit" class="button_logout">Logout</button>
