--- a/templates/purchase_history.html
+++ b/templates/purchase_history.html
@@ -28,7 +28,8 @@
                                 {{ history_item.product.description }}
                             </li>
                             <li class="purchase_content_price">
-                                <span>{{history_item.quantity}} x {{ history_item.product.price }} = {{ history_item.price_purchase}}</span>
+                                <span>{{history_item.quantity}} x {{ history_item.product.price }} = {{ history_item.total_price }}</span>
+
                             </li>
                             <li class="purchase_history_list">
                                 <form action="{% url 'add_to_purchase_history' history_item.id %}" method="post" class="add_to_purchase_history">
