Change settings to deploy

--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -8,7 +8,7 @@
 {% block content %}
 <ul class="purchase_list">
     {% if products|length == 0%}
-         <img src="../static/noorders.png" alt="noorders" class="noorders">
+         <img src="../static_source/noorders.png" alt="noorders" class="noorders">
         <li>Shopping cart is empty</li>
     {% else %}
         {% for product in products %}
