--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <header>
         <ul class="Header_list">
             <li class="Header-logo">
-                <img src="../static/logo.svg" alt="" class="logo">
+                <img src="../static_source/logo.svg" alt="" class="logo">
                 <span>DanStore</span>
             </li>
             <li>
@@ -35,7 +35,7 @@
                                 <li>{{request.user.wallet}}</li>
                             </ul>
                             <a href="{% url 'cart' %}" class="basket_list">
-                                <img src="../static/basket_header.svg" alt="" class="basket">
+                                <img src="../static_source/basket_header.svg" alt="" class="basket">
                                 {% if request.cart|length == 0 %}
                                 <span class="length_cart"></span>
                                 {% else %}
@@ -65,7 +65,7 @@
     <footer class="Footer">
         <ul class="Footer_list">
             <li class="Header-logo">
-                <img src="../static/logo.svg" alt="" class="logo">
+                <img src="../static_source/logo.svg" alt="" class="logo">
             </li>
             <li>
                 <ul class="Menu_list">
