--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                             <img src="{{item.image.url}}" alt="" class="product_image">
                         </a>
                     {% else%}
-                        <img src="../static/logo.svg" alt="" class="product_image">
+                        <img src="../static_source/logo.svg" alt="" class="product_image">
                     {% endif %}
                 </li>
                 <li class="item_name">{{item.name}}</li>
@@ -28,9 +28,9 @@
                         <input type="hidden" name="product_id" value="{{ item.pk }}">
                         <input type="number" name="quantity" value="1" min="1" class="quantity_product">
                         {% if item.id|stringformat:"s" in request.cart.cart %}
-                            <button type="submit" class="button_basket"><img src="../static/full_basket.png" alt="" class="full_basket"></button>
+                            <button type="submit" class="button_basket"><img src="../static_source/full_basket.png" alt="" class="full_basket"></button>
                         {% else %}
-                            <button type="submit" class="button_basket"><img src="../static/basket.svg" alt=""></button>
+                            <button type="submit" class="button_basket"><img src="../static_source/basket.svg" alt=""></button>
                         {% endif %}
                     </form>
                 </li>
