--- a/templates/product.html
+++ b/templates/product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {%block style %}
-    <link rel="stylesheet" href="{%static 'style.css'%}">
+    <link rel="stylesheet" href="{% static 'style.css'%}">
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
                 {% if product.image %}
                     <img src="{{product.image.url}}" alt="" class="product_image">
                 {% else%}
-                    <img src="../static_source/logo.svg" alt="" class="product_image">
+                    <img src="{% static 'logo.svg'%}" alt="" class="product_image">
                 {% endif %}
             </li>
             <li class="item_name">{{product.name}}</li>
