--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 {% block content %}
 <ul class="about_list">
     <li>
-        <h1>Добро пожаловать лох в наш интернет-магазин!</h1>
+        <h1>Добро пожаловать! в наш интернет-магазин!</h1>
     </li>
     <li>
         <span>Мы - команда энтузиастов, создающая уникальные и качественные товары для вашего комфорта и удовольствия. Наша миссия - сделать вашу жизнь лучше, предлагая широкий ассортимент продуктов высокого качества по доступным ценам.</span>
