--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <ul class="Header_list">
             <li class="Header-logo">
                 <img src="{% static 'logo.svg'%}" alt="" class="logo">
-                <span>DanStore</span>
+                <span>AAAAAAAA</span>
             </li>
             <li>
                 <ul class="Menu_list">
